force-app/main/default/objects/Partner_Content_Access__c/Partner_Content_Access__c.object-meta.xml
<CustomObject>
    <label>Partner Content Access</label>
    <nameField>
        <label>Partner Content Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Content Access</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>