force-app/main/default/objects/Partner_Content_Access__c/fields/Access_Status__c.field-meta.xml
<CustomField>
    <fullName>Access_Status__c</fullName>
    <description>Current status of the content access mapping.</description>
    <label>Access Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>