force-app/main/default/objects/Partner_Content_Access__c/fields/Content_Category__c.field-meta.xml
<CustomField>
    <fullName>Content_Category__c</fullName>
    <description>Content category associated with the access rule.</description>
    <label>Content Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>