force-app/main/default/objects/Partner_Content_Access__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description
  >Salesforce ContentDocument Id governed by this access entry.</description>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>