force-app/main/default/objects/Partner_Content_Access__c/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <description>Partner tier allowed by the content access entry.</description>
    <label>Partner Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>