force-app/main/default/objects/Partner_Content_Access__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region allowed by the content access entry.</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>